force-app/main/default/objects/Reply_Rec_Demo_Helper__c.object
<CustomObject>
    <description>What: Reply Recommendations FOR DEMO Helper. Who Service Team. DO NOT CHANGE.</description>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Keywords__c</fullName>
        <inlineHelpText>Key word(s) that will trigger the related suggestions. Can enter several comma separated values. Note that each must be a single word though</inlineHelpText>
        <label>Keywords</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <inlineHelpText>The priority of this recommendation compared to others (in case there are multiple matches)</inlineHelpText>
        <label>Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Reply Rec Demo Helper</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Keywords__c</columns>
        <columns>Weight__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Reply Rec Demo Helper Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reply Rec Demo Helpers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>